# SL-Develop

./: .gitignore  Comparison - Dlib vs MediaPipe.ipynb  README.md  docker-compose.yml  makefile
.dvc/: config
.gitlab/issue_templates/: default_issue_template.md
FacialActionLibras/: README.md  requirements.txt
FacialActionLibras/data/: README.md
FacialActionLibras/env/: 2way.yml  FacialActionLibras.yml  FacialActionLibras_mediapipe.yml  FacialActionLibras_opencv_jnotebook.yml  FacialActionLibras_squeezenet_ablation.yml  FacialActionLibras_vLocal.yml  FacialActionLibras_vLocal_V2.yml  README.md  dlib.yml  extractors.yml  mediapipe39.yml
FacialActionLibras/notebooks/: 1.0-mps-openface-output-visualization.ipynb  2.0-mps-checking-squeezenet-probability-outputs.ipynb  Face-Detection.ipynb  MediaPipe Landmarks - dimensionality reduction.ipynb  MediaPipe-Crop.ipynb  Selecting-files-to-analyzer.ipynb  Selecting-files-to-analyzer_gt2.ipynb  XML para DF - Videos Extras-backup.ipynb  dimensionality reduction.ipynb  jms-Análise Quantitativa - Vídeos Extras.ipynb  jms-Análise Quantitativa - Vídeos Tamires Selecionados.ipynb  jms-v1-Contabilizando AU labels - Comparação Predicts vs Ground Truth.ipynb  jms-v1-Geração de Ground Truth - XML para DF - HM-LIBRAS.ipynb  jms-v1-Geração de Ground Truth - XML para DF - Videos Extras.ipynb  jms-v1-Geração de Ground Truth - XML para DF - Videos Tamires Selecionados.ipynb  plot_landmarks.ipynb
FacialActionLibras/reports/: README.md
FacialActionLibras/src/features/openface/exe/ActionUnitVid2Way/: ActionUnitVid2Way.cpp  ActionUnitVid2Way.vcxproj  CMakeLists.txt
FacialActionLibras/src/features/openface/exe/FeatureExtraction2Way/: CMakeLists.txt  FeatureExtraction2Way.cpp  FeatureExtraction2Way.vcxproj
FacialActionLibras/src/features/openface/exe/LandmarkVid2Way/: CMakeLists.txt  LandmarkVid2Way.cpp  LandmarkVid2Way.vcxproj
FacialActionLibras/src/features/openface/exe/TestingOpenFace/: CMakeLists.txt  TestingOpenFace.cpp  TestingOpenFace.vcxproj  TestingOpenFace_original.cpp
(+184 files in other folders)
